# ecos-python

./: .bumpversion.cfg  .gitmodules  .travis.yml  MANIFEST.in  Makefile  Pipfile  README  README.md  RELEASE.md  appveyor.yml  distribute.sh  pyproject.toml  setup.py
.github/workflows/: build.yml
appveyor/: install.ps1  move-wheel.py
appveyor/conda-recipe/: bld.bat  build.sh  meta.yaml
src/: ecos.py  ecosmodule.c  test_interface.py  test_interface_bb.py
src/ecos/: __init__.py  ecos.py  version.py
travis/: build-osx-wheels.sh  build-wheels.sh
