[build-system]
requires = [
    "numpy>=1.16,<1.17; python_version=='3.5'",
    "numpy>=1.16,<1.17; python_version=='3.6'",
    "numpy>=1.16,<1.17; python_version=='3.7'",
    "numpy>=1.16,<1.17; python_version=='3.8'",
    "numpy>=1.19,<1.20; python_version=='3.9'",
    "setuptools",
    "wheel"
]
